packages/compiler-rs/tests/snapshots/v_on__expression_with_type.snap
---
source: tests/v_on.rs
expression: code
---
_delegateEvents("click");
import { delegateEvents as _delegateEvents, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  n0.$evtclick = handleClick as any;
  return n0;
})();
