packages/compiler-rs/tests/snapshots/v_on__namespace_event_with_component.snap
---
source: tests/v_on.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Comp, { "onUpdate:modelValue": () => () => {} }, null, true);
  return n0;
})();
