packages/compiler-rs/tests/snapshots/v_on__should_delegate_event.snap
---
source: tests/v_on.rs
expression: code
---
_delegateEvents("click");
import { delegateEvents as _delegateEvents, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  n0.$evtclick = test;
  return n0;
})();
