packages/compiler-rs/tests/snapshots/v_on__should_not_error_if_no_expression_but_has_modifier.snap
---
source: tests/v_on.rs
expression: code
---
_delegateEvents("click");
import { delegateEvents as _delegateEvents, template as _template, withModifiers as _withModifiers } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  n0.$evtclick = _withModifiers(() => {}, ["prevent"]);
  return n0;
})();
