packages/compiler-rs/tests/snapshots/v_on__should_transform_click_middle.snap
---
source: tests/v_on.rs
expression: code
---
_delegateEvents("mouseup");
import { delegateEvents as _delegateEvents, template as _template, withModifiers as _withModifiers } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  n0.$evtmouseup = _withModifiers(test, ["middle"]);
  return n0;
})();
